member picture spacing fix on larger screens

--- a/BandSite.css
+++ b/BandSite.css
@@ -195,7 +195,7 @@ a {
 .memberouter {
     float:left;
     /*width: 19%;*/
-    margin-right:1%;
+    margin-right:10px;
     text-align:center;
     transition: ease-in-out all 0.5s;;
 }
